--- a/conda.yml
+++ b/conda.yml
@@ -1,18 +1,26 @@
-name: paccmann_rl
+name: paccmann_affinity
 channels:
   - https://conda.anaconda.org/rdkit
 dependencies:
   - rdkit=2019.03.1
-  - python>=3.6,<3.8
+  - python>=3.7,<3.8
   - pip>=19.1
   - pip:
-    - pytoda @ git+https://git@github.com/PaccMann/paccmann_datasets@0.0.1
-    - paccmann_predictor @ git+https://git@github.com/PaccMann/paccmann_predictor@0.0.1
-    - paccmann_omics @ git+https://git@github.com/PaccMann/paccmann_omics@0.0.1
-    - paccmann_chemistry @ git+https://git@github.com/PaccMann/paccmann_chemistry@0.0.1
-    - paccmann_generator @ git+https://git@github.com/PaccMann/paccmann_generator@0.0.1
     - numpy>=1.14.3
-    - pandas>=0.24.1
-    - torch>=1.0.1
-    - matplotlib>=2.2.2
-    - seaborn>=0.9.0
+    - scipy>=1.3.1
+    - torch>=1.3.0
+    - pytoda @ git+https://github.com/PaccMann/paccmann_datasets@0.1.1
+    - paccmann_predictor @ git+https://github.com/PaccMann/paccmann_predictor@sarscov2
+    - paccmann_chemistry @ git+https://github.com/PaccMann/paccmann_chemistry@sarscov2
+    - paccmann_generator @ git+https://github.com/PaccMann/paccmann_generator@sarscov2
+    - paccmann_omics @ git+https://github.com/PaccMann/paccmann_omics@sarscov2
+    - absl-py>=0.8.1
+    # data analysis
+    # - upfp==0.0.5
+    # - pandas>=0.24.2,<1.0
+    # - scikit-learn==0.22.2
+    # - matplotlib>=3.1.1
+    # - seaborn>=0.9.0
+    # - jupyter==1.0.0
+    # - faerun==0.3.7
+    # - tqdm>=4.31
