chore: Update Dockerfile.

--- a/.travis/Dockerfile
+++ b/.travis/Dockerfile
@@ -1,6 +1,6 @@
 FROM drugilsberg/rdkit-ubuntu:latest
 RUN apt-get update && apt-get install -y git
-WORKDIR /paccmann_rl
+WORKDIR /paccmann_sarsvoc2
 # install requirements
 COPY .travis/requirements.txt .
 RUN pip3 install --no-cache-dir -r requirements.txt
