--- a/conda.yml
+++ b/conda.yml
@@ -1,4 +1,4 @@
-name: paccmann_affinity
+name: paccmann_sarscov2
 channels:
   - https://conda.anaconda.org/rdkit
 dependencies:
@@ -11,6 +11,7 @@ dependencies:
     - torch>=1.3.0
     - pytoda @ git+https://github.com/PaccMann/paccmann_datasets@0.1.1
     - paccmann_predictor @ git+https://github.com/PaccMann/paccmann_predictor@sarscov2
+    - toxsmi @ git+https://github.com/PaccMann/toxsmi@0.0.1
     - paccmann_chemistry @ git+https://github.com/PaccMann/paccmann_chemistry@sarscov2
     - paccmann_generator @ git+https://github.com/PaccMann/paccmann_generator@sarscov2
     - paccmann_omics @ git+https://github.com/PaccMann/paccmann_omics@sarscov2
