--- a/conda.yml
+++ b/conda.yml
@@ -13,7 +13,7 @@ dependencies:
     - paccmann_predictor @ git+https://github.com/PaccMann/paccmann_predictor@sarscov2
     - toxsmi @ git+https://github.com/PaccMann/toxsmi@0.0.1
     - paccmann_chemistry @ git+https://github.com/PaccMann/paccmann_chemistry@sarscov2
-    - paccmann_generator @ git+https://github.com/PaccMann/paccmann_generator@sarscov2
+    # - paccmann_generator @ git+https://github.com/PaccMann/paccmann_generator@sarscov2
     - paccmann_omics @ git+https://github.com/PaccMann/paccmann_omics@sarscov2
     - absl-py>=0.8.1
     # data analysis
